2307 [AVS Script Creator] fixed not applying film when manually choosing "Partially film"
2306 [MP4 Muxer] cosmetic - "disable" instead of "disabled" parameter
2305 [AVS Script Creator] fixed "TDeint (with EDI + BOB)"
2304 [AVS Script Creator] fixed recreating the index file during "Analyse" if using FFMS with a non-default index file location
2303 [AVS Script Creator] removed cropping limit
2302 [AVS Script Creator] fixed wrong resize values in some cases if using cropping without anamorphic encoding
2301 [MKV Demuxer] fixed wrong detection of errors if file name contains "error"
2300 [MediaInfo] fixed wrong aspect ratio if using anamorphic AVS files
2299 [MP4 Muxer] allow Nero & Apple Chapters styles muxing for better interoperability with players. Patch by Eli Bildirici (#66) 
2298 [MP4 Muxer] avoid quote truncation within Chapters Names. Patch by Eli Bildirici (#66)
2297 [MediaInfo] fixed wrong aspect ratio in some cases


Changelog 2287 --> 2296

Features/Changes:
- added support for Apple TV & iPad in the MP4 muxer

Enhancements/Fixes:
[AVS Cutter] fixed not fading to black
[AVS Script Creator] fixed "Clever (TM) anamorphic encoding" if using "Encode non-mod 16"
[AVS Script Creator] removed "Successfully converted to YV12" message
[M2TS Muxer] disabled pure TrueHD as it is not supported by tsMuxeR
[OneClick] fixed some "index out of bounds" errors. Bug #703 + #707
[OneClick] only supported subtitle tracks will be added
[x264] fixed --crf and --partitions not set to default settings for new MeGUI installations


Changelog 2237 --> 2287

Features/Changes:
- enhanced AVS Script Creator (read details in the block below) 
- added BassAudioSource() as audio decoder
  the default order is now: NicAudio, BassAudio, FFAudioSource, DirectShow
- enhanced OneClick e.g. mux input files into MKV if possible for better audio/video processing support

Enhancements/Fixes:
[Adaptive Muxer] fixed handling of the "and close" button
[Audio Encoding Window] cosmetics